--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_de_DE.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_de_DE.json
@@ -159,12 +159,14 @@
   "telecom_pack_migration_confirm_resume_contact_phone": "Telefonnummer, unter der Sie bei Bedarf kontaktiert werden können",
   "telecom_pack_migration_confirm_resume_phone_form_error": "Die angegebene Nummer muss gültig sein.",
   "telecom_pack_migration_choose_offer_error": "Beim Abruf der Angebote ist ein Fehler aufgetreten: {{ error }}",
-  "telecom_pack_migration_modem_yes": "Neues Modem ({{ price }} ohne MwSt / Monat)",
-  "telecom_pack_migration_modem_recycled": "Recyceltes Modem ({{ price }} ohne MwSt / Monat)",
-  "telecom_pack_migration_modem_no": "Kein Modem",
+  "telecom_pack_migration_modem_yes": "Ich möchte ein neues Modem verwenden ({{ price }} ohne MwSt / Monat)",
+  "telecom_pack_migration_modem_recycled": "Ich möchte ein recyceltes Modem verwenden ({{ price }} ohne MwSt / Monat)",
+  "telecom_pack_migration_modem_no": "Ich möchte kein Modem",
   "telecom_pack_migration_modem_required": "Die Wahl eines Modemtyps ist zwingend erforderlich",
   "telecom_pack_migration_confirm_modem_rental_yes": "Miete für das neue Modem",
   "telecom_pack_migration_confirm_modem_rental_recycled": "Modem-Vermietung",
   "telecom_pack_migration_offers_debit_mention_1": "(1) Bis zu 92 Mbit/s VDSL und 22 Mbit/s ADSL, je nach Förderfähigkeit.",
-  "telecom_pack_migration_offers_debit_mention_2": "(2) Bis zu 36 Mbit/s VDSL und 1 Mbit/s ADSL, je nach Förderfähigkeit."
+  "telecom_pack_migration_offers_debit_mention_2": "(2) Bis zu 36 Mbit/s VDSL und 1 Mbit/s ADSL, je nach Förderfähigkeit.",
+  "telecom_pack_migration_modem_keep": "Ich möchte mein Modem ({{ price }} ohne MwSt / Monat) beibehalten",
+  "telecom_pack_migration_confirm_modem_rental": "Modem-Miete"
 }
