--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_es_ES.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_es_ES.json
@@ -164,12 +164,14 @@
   "telecom_pack_migration_confirm_resume_contact_phone": "Número de teléfono de contacto",
   "telecom_pack_migration_confirm_resume_phone_form_error": "El número introducido debe ser válido.",
   "telecom_pack_migration_choose_offer_error": "Se ha producido un error al cargar las soluciones: {{ error }}.",
-  "telecom_pack_migration_modem_yes": "Módem nuevo ({{ price }}/mes + IVA)",
-  "telecom_pack_migration_modem_recycled": "Módem reciclador ({{ price }}/mes + IVA)",
-  "telecom_pack_migration_modem_no": "Sin módem",
+  "telecom_pack_migration_modem_yes": "Quiero contratar un módem nuevo ({{ price }}/mes + IVA)",
+  "telecom_pack_migration_modem_recycled": "Quiero contratar un módem reciclable ({{ price }}/mes + IVA)",
+  "telecom_pack_migration_modem_no": "No quiero un módem",
   "telecom_pack_migration_modem_required": "La selección de un tipo de módem es obligatoria.",
   "telecom_pack_migration_confirm_modem_rental_yes": "Alquiler módem nuevo",
   "telecom_pack_migration_confirm_modem_rental_recycled": "Alquiler de módem reciclable",
   "telecom_pack_migration_offers_debit_mention_1": "(1) Hasta 92 Mbps que descenden en VDSL y 22 Mbps en ADSL, en función de los requisitos.",
-  "telecom_pack_migration_offers_debit_mention_2": "(2) Hasta 36 MB/s en VDSL y 1 Mb/s en ADSL, en función de los requisitos."
+  "telecom_pack_migration_offers_debit_mention_2": "(2) Hasta 36 MB/s en VDSL y 1 Mb/s en ADSL, en función de los requisitos.",
+  "telecom_pack_migration_modem_keep": "Quiero conservar mi módem ({{ price }}/mes + IVA)",
+  "telecom_pack_migration_confirm_modem_rental": "Alquiler módem"
 }
