--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_de_DE.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_de_DE.json
@@ -119,12 +119,14 @@
   "pack_move_resume_install_fees": "Die Einrichtungsgebühr beträgt {{ price }} ohne MwSt.",
   "pack_move_resume_creation_line_fees": "Die Kosten für die Erstellung einer Leitung belaufen sich auf {{ price }} ohne MwSt.",
   "pack_move_resume_promotion": "Die Einrichtungsgebühr und die ersten {{ duration }} Monate Ihres neuen Abos sind kostenlos (mit Ausnahme der Modem-Miete, Zusatzoptionen oder Transportkosten).",
-  "pack_move_modem_yes": "Neues Modem ({{ price }} ohne MwSt / Monat)",
-  "pack_move_modem_recycled": "Recyceltes Modem ({{ price }} ohne MwSt / Monat)",
-  "pack_move_modem_no": "Kein Modem",
+  "pack_move_modem_yes": "Ich möchte ein neues Modem verwenden ({{ price }} ohne MwSt / Monat)",
+  "pack_move_modem_recycled": "Ich möchte ein recyceltes Modem verwenden ({{ price }} ohne MwSt / Monat)",
+  "pack_move_modem_no": "Ich möchte kein Modem",
   "pack_move_modem_required": "Die Wahl eines Modemtyps ist zwingend erforderlich",
   "pack_move_confirm_modem_rental_yes": "Miete für das neue Modem",
   "pack_move_confirm_modem_rental_recycled": "Modem-Vermietung",
   "pack_move_offers_debit_mention_1": "(1) Bis zu 92 Mbit/s VDSL und 22 Mbit/s ADSL, je nach Förderfähigkeit.",
-  "pack_move_offers_debit_mention_2": "(2) Bis zu 36 Mbit/s VDSL und 1 Mbit/s ADSL, je nach Förderfähigkeit."
+  "pack_move_offers_debit_mention_2": "(2) Bis zu 36 Mbit/s VDSL und 1 Mbit/s ADSL, je nach Förderfähigkeit.",
+  "pack_move_modem_keep": "Ich möchte mein Modem ({{ price }} ohne MwSt / Monat) beibehalten",
+  "pack_move_confirm_modem_rental": "Modem-Miete"
 }
