--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_it_IT.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_it_IT.json
@@ -120,12 +120,14 @@
   "pack_move_resume_install_fees": "Le spese di installazione sono di {{ price }} +IVA.",
   "pack_move_resume_creation_line_fees": "Le spese di creazione della linea sono di {{ price }} +IVA.",
   "pack_move_resume_promotion": "Le spese di installazione e i primi {{ duration }} mesi del nuovo abbonamento sono incluse (locazione del modem, opzioni aggiuntive o spese di trasporto escluse).",
-  "pack_move_modem_yes": "Modem nuovo ({{ price }} +IVA/mese)",
-  "pack_move_modem_recycled": "Modem riciclato ({{ price }} +IVA/mese)",
-  "pack_move_modem_no": "Nessun modem",
+  "pack_move_modem_yes": "Vorrei prendere un modem nove ({{ price }} +IVA/mese)",
+  "pack_move_modem_recycled": "Vorrei prendere un modem riciclato ({{ price }} +IVA/mese)",
+  "pack_move_modem_no": "Non voglio un modem",
   "pack_move_modem_required": "La selezione di un tipo di modem è obbligatoria",
   "pack_move_confirm_modem_rental_yes": "Location modem nove",
   "pack_move_confirm_modem_rental_recycled": "Location modem riciclato",
   "pack_move_offers_debit_mention_1": "(1) Fino a 92 Mb/s discendenti in VDSL e 22 Mb/s in ADSL, secondo l'ammissibilità.",
-  "pack_move_offers_debit_mention_2": "(2) Fino a 36 Mb/s importo in VDSL e 1 Mb/s in ADSL, secondo l'ammissibilità."
+  "pack_move_offers_debit_mention_2": "(2) Fino a 36 Mb/s importo in VDSL e 1 Mb/s in ADSL, secondo l'ammissibilità.",
+  "pack_move_modem_keep": "Voglio conservare il mio modem ({{ price }} +IVA/mese)",
+  "pack_move_confirm_modem_rental": "Locazione modem"
 }
