--- a/packages/manager/modules/pci/src/components/project/billing/cold-archive-list/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/components/project/billing/cold-archive-list/translations/Messages_fr_FR.json
@@ -5,10 +5,10 @@
   "pci_billing_cold_archive_type_archive_label": "Archivage sur bandes",
   "pci_billing_cold_archive_type_archive-fees_label": "Frais de suppression",
   "pci_billing_cold_archive_type_restore_label": "Restauration de données",
-  "pci_billing_cold_archive_type_archive-fees_tooltip_1": "La durée minimale d'archivage est de 180 jours.",
+  "pci_billing_cold_archive_type_archive-fees_tooltip_1": "La durée minimale d'archivage est de 180 jours. ",
   "pci_billing_cold_archive_type_archive-fees_tooltip_2": "Dans le cas où une archive est supprimée avant cette durée d'engagement, date = date comprise entre 0 jour et 180 jours, vous êtes facturé des frais supplémentaires calculés : [180 jours - date] x prix de la classe de stockage.",
   "pci_billing_cold_archive_price": "Prix",
   "pci_billing_cold_archive_consumption": "Consommation",
-  "pci_billing_cold_archive_consumption_value_gbih": "{{ value }} GiB/h",
+  "pci_billing_cold_archive_consumption_value_gbih": "{{ value }} GiBh",
   "pci_billing_cold_archive_consumption_value_gbi": "{{ value }} GiB"
 }
