--- a/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/components/project/billing/hourly-resource-list/translations/Messages_fr_FR.json
@@ -5,7 +5,7 @@
   "cpbc_hourly_instance_detail_title": "Serveurs",
   "cpbc_object_storage_detail_title": "Stockage d'objets",
   "cpbc_archive_storage_detail_title": "Stockage d'archives",
-  "cpbc_cold_archive_detail_title": "Cold Archives",
+  "cpbc_cold_archive_detail_title": "Cold Archive",
   "cpbc_snapshot_detail_title": "Stockage des sauvegardes",
   "cpbc_volume_detail_title": "Disques supplémentaires",
   "cpbc_hourly_instance_trafic_title": "Trafic public sortant des instances",
