--- a/packages/manager/modules/iam/src/components/createPolicy/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/iam/src/components/createPolicy/translations/Messages_fr_FR.json
@@ -3,6 +3,12 @@
   "iam_create_policy_error_creation": "Impossible de créer cette politique : {{ message }}",
   "iam_create_policy_error_heading": "Certaines erreurs dans le formulaire empêchent la création de cette politique. Merci de les corriger avant de le soumettre à nouveau.",
   "iam_create_policy_error_no_resources": "Aucune ressource n'est disponible pour ce ou ces types de produits.",
+  "iam_create_policy_deletion_actions_many": "{{ count }} actions seront supprimées",
+  "iam_create_policy_deletion_actions_one": "1 action sera supprimée",
+  "iam_create_policy_deletion_resources_many": "{{ count }} ressources seront supprimées",
+  "iam_create_policy_deletion_resources_one": "1 ressource sera supprimée",
+  "iam_create_policy_form_actions_description": "Sélectionnez les actions autorisées aux identités sur les ressources choisies.",
+  "iam_create_policy_form_actions_heading": "Actions",
   "iam_create_policy_form_name_error_pattern": "Le format du nom de la politique n'est pas conforme",
   "iam_create_policy_form_name_heading": "Nom de la politique",
   "iam_create_policy_form_resource_groups_create": "Créer un groupe de ressources",
@@ -12,7 +18,7 @@
   "iam_create_policy_form_resource_types_error_required": "Veuillez sélectionner un ou plusieurs types de produits.",
   "iam_create_policy_form_resource_types_heading": "Types de produits",
   "iam_create_policy_form_resources_description": "Ajoutez les ressources concernées par votre politique.",
-  "iam_create_policy_form_resources_error_required": "Veuillez sélectionner une ou plusieures ressources ou groupes de ressources",
+  "iam_create_policy_form_resources_error_required": "Veuillez sélectionner une ou plusieurs ressources ou groupes de ressources",
   "iam_create_policy_form_resources_heading": "Ressources",
   "iam_create_policy_header_description": "La politique contient une liste d'actions autorisées à une liste d'identités s'appliquant à des ressources.",
   "iam_create_policy_header_guide_text": "Guides",
