--- a/packages/manager/modules/iam/src/components/deleteEntity/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/iam/src/components/deleteEntity/translations/Messages_fr_FR.json
@@ -15,6 +15,11 @@
   "iam_delete_entity_resourceGroup_name": "Suppression du groupe de ressources : ",
   "iam_delete_entity_resourceGroup_error": "Une erreur est survenue lors de la suppression du groupe de ressources : {{ message }}",
   "iam_delete_entity_resourceGroup_success": "Le groupe de ressources a bien été supprimé",
+  "iam_delete_entity_resourceType_heading": "Supprimer un type de produit",
+  "iam_delete_entity_resourceType_warn": "Attention, cette action va entrainer la suppression des ressources associées et des actions sélectionnées",
+  "iam_delete_entity_resourceType_name": "Suppression du type de produit : ",
+  "iam_delete_entity_resourceType_error": "Une erreur est survenue lors de la suppression du type de produit : {{ message }}",
+  "iam_delete_entity_resourceType_success": "Le type de produit a bien été supprimé",
   "iam_delete_entity_primary_label": "Supprimer",
   "iam_delete_entity_secondary_label": "Annuler"
 }
