--- a/packages/manager/modules/pci/src/projects/project/data-processing/jobs/submit-job/spark-config/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/data-processing/jobs/submit-job/spark-config/translations/Messages_pl_PL.json
@@ -12,7 +12,7 @@
   "data_processing_submit_job_stepper_spark_jar_file_help": "Ścieżka dostępu do pliku JAR w kontenerze obiektów",
   "data_processing_submit_job_stepper_spark_version_label": "Wersja Spark",
   "data_processing_submit_job_stepper_spark_arguments_label": "Argumenty (opcjonalnie)",
-  "data_processing_submit_job_stepper_spark_arguments_placeholder": "Wciśnij przycisk <Enter>, aby dodać argument",
+  "data_processing_submit_job_stepper_spark_arguments_placeholder": "Wciśnij przycisk, <Entrer>aby dodać argument",
   "data_processing_submit_job_stepper_spark_invalid_jar_label": "Uwaga: Zdaje się, że ten plik nie jest prawidłowym plikiem JAR (typ MIME nie pasuje do typu pliku JAR). ",
   "data_processing_submit_job_stepper_spark_not_found_file_label": "Zdaje się, że ten plik nie istnieje w wybranym kontenerze.",
   "data_processing_submit_job_stepper_spark_no_python_environment_label": "Plik środowiska Python 'environment.yml' nie istnieje w wybranym kontenerze.",
