fix(i18n): add missing translations [CDS 2333]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/bm-server-components/src/netboot/translations/Messages_de_DE.json
+++ b/packages/manager/modules/bm-server-components/src/netboot/translations/Messages_de_DE.json
@@ -36,5 +36,7 @@
   "server_configuration_netboot_confirm": "Bestätigen",
   "server_configuration_netboot_review": "Zusammenfassung",
   "server_configuration_netboot_save_in_progress": "Update wird durchgeführt...",
-  "server_configuration_netboot_invalid": "Ungültig"
+  "server_configuration_netboot_invalid": "Ungültig",
+  "server_configuration_netboot_rescue_help": "Der Rescue-Modus kann nützlich sein, um auf einem Dedicated Server Hardwareprobleme zu diagnostizieren.",
+  "server_configuration_netboot_rescue_help_link": "Sehen Sie sich die Anleitung für die Hardware-Diagnose an."
 }
