--- a/packages/manager/modules/iam/src/components/actionSelect/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/iam/src/components/actionSelect/translations/Messages_fr_FR.json
@@ -8,7 +8,8 @@
   "iam_action_select_category_count_no_selection_many": "({{ total }} actions)",
   "iam_action_select_category_count_no_selection_one": "(1 action)",
   "iam_action_select_custom_action_button": "Ajouter",
-  "iam_action_select_custom_action_error_exist": "Cette action a déjà été ajoutée ou sélectionnée",
+  "iam_action_select_custom_action_error_requirements": "Cette action n'existe pas",
+  "iam_action_select_custom_action_error_selected": "L'action est déjà sélectionnée",
   "iam_action_select_custom_action_label": "Ajouter manuellement des actions",
   "iam_action_select_custom_action_success_created": "L'action {{ action }} a été ajoutée à {{ resourceType }}",
   "iam_action_select_custom_action_success_selected": "L'action {{ action }} a été sélectionnée dans {{ resourceType }}",
